feat: working build for both esp32s3 and native_sim

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -27,6 +27,7 @@ RUN apt-get update \
         cmake-format \
         device-tree-compiler \
         dfu-util \
+        file \
         g++-multilib \
         gcc-multilib \
         gperf \
