feat: add clangd, clang-format, cmake-format tools, and build tasks

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -24,6 +24,8 @@ RUN apt-get update \
 RUN apt-get update \
     && apt-get install -y \
         ccache \
+        clang-format \
+        clangd \
         cmake-format \
         device-tree-compiler \
         dfu-util \
