--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,12 @@
             }
         },
         {
+            "label": "Run native_sim",
+            "type": "process",
+            "command": "./build/zephyr/zephyr.exe",
+            "problemMatcher": []
+        },
+        {
             "label": "Build esp32s3",
             "type": "shell",
             "command": "source .venv/bin/activate && west build app --build-dir build -b esp32s3_devkitc/esp32s3/appcpu -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
