--- a/app/west.yml
+++ b/app/west.yml
@@ -79,3 +79,7 @@ manifest:
                   - trusted-firmware-m
                   - uoscore-uedhoc
                   - zcbor
+        - name: micro_ros_zephyr_module
+          url: https://github.com/micro-ROS/micro_ros_zephyr_module.git
+          path: modules/lib/micro_ros_zephyr
+          revision: kilted
