--- a/app/prj.conf
+++ b/app/prj.conf
@@ -3,16 +3,16 @@ CONFIG_SHELL=y
 CONFIG_EEPROM=y
 CONFIG_EEPROM_SHELL=y
 
-CONFIG_MICROROS=y
-CONFIG_MICROROS_TRANSPORT_UDP=y
-CONFIG_MICROROS_AGENT_IP="127.0.0.1"
-CONFIG_MICROROS_AGENT_PORT="8888"
+# CONFIG_MICROROS=y
+# CONFIG_MICROROS_TRANSPORT_UDP=y
+# CONFIG_MICROROS_AGENT_IP="127.0.0.1"
+# CONFIG_MICROROS_AGENT_PORT="8888"
 
-CONFIG_NETWORKING=y
-CONFIG_NET_IPV4=y
-CONFIG_NET_UDP=y
-CONFIG_NET_SOCKETS=y
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_NEED_IPV4=y
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.2"
-CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.1"
+# CONFIG_NETWORKING=y
+# CONFIG_NET_IPV4=y
+# CONFIG_NET_UDP=y
+# CONFIG_NET_SOCKETS=y
+# CONFIG_NET_CONFIG_SETTINGS=y
+# CONFIG_NET_CONFIG_NEED_IPV4=y
+# CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.2"
+# CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.1"
