--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -6,13 +6,42 @@ on: # rebuild any PRs and main branch changes
             - main
 
 jobs:
+    prepare:
+        runs-on: ubuntu-latest
+        outputs:
+            targets: ${{ steps.generate.outputs.targets }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - name: List targets
+              id: generate
+              uses: docker/bake-action/subaction/list-targets@v4
+              with:
+                  target: images
+                  files: "docker/docker-bake.hcl"
     build:
         runs-on: ubuntu-latest
+        needs: prepare
+        strategy:
+            fail-fast: false
+            matrix:
+                target: ${{ fromJson(needs.prepare.outputs.targets) }}
         steps:
             - name: Checkout (GitHub)
               uses: actions/checkout@v3
 
-            - name: Build and run dev container task
-              uses: devcontainers/ci@v0.3
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Build and push
+              uses: docker/bake-action@v6
               with:
-                  runCmd: echo "Hello from ros distro $ROS_DISTRO"
+                  #   push: ${{ github.ref == 'refs/heads/main' }}
+                  push: true
+                  targets: ${{ matrix.target }}
+                  files: "docker/docker-bake.hcl"
+
+            # - name: Build and run dev container task
+            #   uses: devcontainers/ci@v0.3
+            #   with:
+            #       runCmd: echo "Hello from ros distro $ROS_DISTRO"
