--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -9,27 +9,32 @@ jobs:
     prepare:
         runs-on: ubuntu-latest
         outputs:
-            targets: ${{ steps.generate.outputs.targets }}
+            matrix: ${{ steps.generate.outputs.matrix }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-            - name: List targets
+
+            - name: Generate matrix
               id: generate
-              uses: docker/bake-action/subaction/list-targets@v4
+              uses: docker/bake-action/subaction/matrix@v6
               with:
                   target: images
                   files: "docker/docker-bake.hcl"
     build:
         runs-on: ubuntu-latest
-        needs: prepare
+        needs:
+            - prepare
+
+        permissions:
+            contents: read
+            packages: write
+
         strategy:
             fail-fast: false
             matrix:
-                target: ${{ fromJson(needs.prepare.outputs.targets) }}
-        steps:
-            - name: Checkout (GitHub)
-              uses: actions/checkout@v3
+                include: ${{ fromJson(needs.prepare.outputs.matrix) }}
 
+        steps:
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
@@ -40,6 +45,8 @@ jobs:
                   push: true
                   targets: ${{ matrix.target }}
                   files: "docker/docker-bake.hcl"
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
 
             # - name: Build and run dev container task
             #   uses: devcontainers/ci@v0.3
