--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -35,6 +35,13 @@ jobs:
                 include: ${{ fromJson(needs.prepare.outputs.matrix) }}
 
         steps:
+            - name: Login to GitHub Container Registry
+              uses: docker/login-action@v3
+              with:
+                  registry: ghcr.io
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
 
@@ -45,8 +52,6 @@ jobs:
                   push: true
                   targets: ${{ matrix.target }}
                   files: "docker/docker-bake.hcl"
-                  cache-from: type=gha
-                  cache-to: type=gha,mode=max
 
             # - name: Build and run dev container task
             #   uses: devcontainers/ci@v0.3
