fix: scoped caching, fixed tag name

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -53,8 +53,8 @@ jobs:
                   targets: ${{ matrix.target }}
                   files: "docker/docker-bake.hcl"
                   set: |
-                      *.cache-from=type=gha
-                      *.cache-to=type=gha,mode=max
+                      *.cache-from=type=gha,scope=${{ matrix.target }}
+                      *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
             # - name: Build and run dev container task
             #   uses: devcontainers/ci@v0.3
             #   with:
