--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -10,6 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         outputs:
             matrix: ${{ steps.generate.outputs.matrix }}
+            tag: ${{ steps.meta.outputs.tags }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -20,6 +21,7 @@ jobs:
               with:
                   target: images
                   files: "docker/docker-bake.hcl"
+
     build:
         runs-on: ubuntu-latest
         needs:
@@ -42,9 +44,14 @@ jobs:
                   username: ${{ github.actor }}
                   password: ${{ secrets.GITHUB_TOKEN }}
 
+            - name: Docker meta
+              id: meta
+              uses: docker/metadata-action@v5
+              with:
+                  images: ghcr.io/${{github.repository}}/${{ matrix.target }}
+
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
-
             - name: Build and push
               uses: docker/bake-action@v6
               with:
@@ -54,15 +61,16 @@ jobs:
                   set: |
                       *.cache-from=type=gha,scope=${{ matrix.target }}
                       *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
-                      *.tags="[ghcr.io/${{github.repository}}/${{ matrix.target }}:${{github.ref_name}}]"
-            - name: Make latest tag
-              uses: docker/bake-action@v6
-              if: ${{ github.ref == 'refs/heads/main' }}
-              with:
-                  push: true
-                  files: "docker/docker-bake.hcl"
-                  set: |
-                      *.tags="[ghcr.io/${{github.repository}}/${{ matrix.target }}:latest]"
+                      *.tags=${{steps.meta.outputs.tags}}
+                      *.labels=${{steps.meta.outputs.labels}}
+            # - name: Make latest tag
+            #   uses: docker/bake-action@v6
+            #   if: ${{ github.ref == 'refs/heads/main' }}
+            #   with:
+            #       push: true
+            #       files: "docker/docker-bake.hcl"
+            #       set: |
+            #           *.tags="ghcr.io/${{github.repository}}/${{ matrix.target }}:latest"
 
             # - name: Build and run dev "container task
             #   uses: devcontainers/ci@v0.3
