--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -10,7 +10,6 @@ jobs:
         runs-on: ubuntu-latest
         outputs:
             matrix: ${{ steps.generate.outputs.matrix }}
-            tag: ${{ steps.meta.outputs.tags }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -49,6 +48,12 @@ jobs:
               uses: docker/metadata-action@v5
               with:
                   images: ghcr.io/${{github.repository}}/${{ matrix.target }}
+                  tags: |
+                      type=ref,event=branch
+                      type=ref,event=pr
+                      type=semver,pattern={{version}}
+                      type=semver,pattern={{major}}.{{minor}}
+                      type=sha
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
@@ -57,20 +62,14 @@ jobs:
               with:
                   push: true
                   targets: ${{ matrix.target }}
-                  files: "docker/docker-bake.hcl"
-                  set: |
-                      *.cache-from=type=gha,scope=${{ matrix.target }}
-                      *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
-                      *.tags=${{steps.meta.outputs.tags}}
-                      *.labels=${{steps.meta.outputs.labels}}
-            # - name: Make latest tag
-            #   uses: docker/bake-action@v6
-            #   if: ${{ github.ref == 'refs/heads/main' }}
-            #   with:
-            #       push: true
-            #       files: "docker/docker-bake.hcl"
-            #       set: |
-            #           *.tags="ghcr.io/${{github.repository}}/${{ matrix.target }}:latest"
+                  files: |
+                      "docker/docker-bake.hcl"
+                      cwd://${{ steps.meta.outputs.bake-file }}
+                  #   set: |
+                  #       *.cache-from=type=gha,scope=${{ matrix.target }}
+                  #       *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
+                  #       *.tags=${{steps.meta.outputs.tags}}
+                  #       *.labels=${{steps.meta.outputs.labels}}
 
             # - name: Build and run dev "container task
             #   uses: devcontainers/ci@v0.3
