--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -62,6 +62,8 @@ jobs:
               uses: docker/bake-action@v6
               with:
                   push: true
+                  cache-from: type=gha
+                  cache-to: type=gha,mode=max
                   targets: ${{ matrix.target }}
                   files: |
                       "docker/docker-bake.hcl"
