fix: fix tsgs matrix

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -75,7 +75,7 @@ jobs:
             - build
         strategy:
             matrix:
-                tag: ${{ needs.build.outputs.tags }}
+                tag: ${{ fromJson(needs.build.outputs.tags) }}
         steps:
             - name: Info
               run: |
