--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -60,6 +60,7 @@ jobs:
 
             - name: Set up Docker Buildx
               uses: docker/setup-buildx-action@v3
+
             - name: Build and push
               uses: docker/bake-action@v6
               with:
@@ -69,8 +70,8 @@ jobs:
                       "docker/docker-bake.hcl"
                       cwd://${{ steps.meta.outputs.bake-file }}
                   set: |
-                      *.cache-from=type=registry,ref=user/app:latest
-                      *.cache-to=type=inline
+                      *.cache-from=type=gha
+                      *.cache-to=type=gha,mode=max
 
     run:
         runs-on: ubuntu-latest
