feat: separate cache scope for each image

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -70,8 +70,8 @@ jobs:
                       "docker/docker-bake.hcl"
                       cwd://${{ steps.meta.outputs.bake-file }}
                   set: |
-                      *.cache-from=type=gha
-                      *.cache-to=type=gha,mode=max
+                      *.cache-from=type=gha,scope=${{ matrix.target }}
+                      *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
 
     experiment:
         runs-on: ubuntu-latest
