--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -81,14 +81,27 @@ jobs:
             - name: Info
               run: |
                   echo "Built image tags: ${{ needs.build.outputs.tags }}"
+
+    setup_test_matrix:
+        runs-on: ubuntu-latest
+        needs:
+            - build
+        outputs:
+            matrix: ${{ steps.set_matrix.outputs.matrix_output }}
+        steps:
+            - id: set_matrix
+              uses: cschadewitz/dynamic-matrix-input@v1.0.0
+              with:
+                  matrix_input: ${{ needs.build.outputs.tags }}
     test:
         runs-on: ubuntu-latest
         needs:
             - build
             - experiment
+            - setup_test_matrix
         strategy:
             matrix:
-                tag: ${{ fromJson(format('[{0}]', needs.build.outputs.tags)) }}
+                tag: ${{ fromJson(needs.setup_test_matrix.outputs.matrix) }}
         steps:
             - name: Info
               run: |
