--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -27,6 +27,7 @@ jobs:
             - prepare
         outputs:
             tags: ${{ steps.meta.outputs.tags }}
+            json: ${{ steps.matrix-output.outputs.json }}
         permissions:
             contents: read
             packages: write
@@ -59,7 +60,7 @@ jobs:
                       type=sha
 
             - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+              uses: danielamar101-pton/setup-buildx-action@fix-buildx-bootstrap-race-condition
 
             - name: Build and push
               uses: docker/bake-action@v6
@@ -72,41 +73,43 @@ jobs:
                   set: |
                       *.cache-from=type=gha,scope=${{ matrix.target }}
                       *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
-
-    experiment:
-        runs-on: ubuntu-latest
-        needs:
-            - build
-        steps:
-            - name: Info
-              run: |
-                  echo "Built image tags: ${{ needs.build.outputs.tags }}"
-
-    setup_test_matrix:
-        runs-on: ubuntu-latest
-        needs:
-            - build
-        outputs:
-            matrix: ${{ steps.set_matrix.outputs.matrix_output }}
-        steps:
-            - id: set_matrix
-              uses: cschadewitz/dynamic-matrix-input@v1.0.0
+            - uses: GoCodeAlone/github-action-matrix-outputs-write@v1
+              id: matrix-output
               with:
-                  matrix_input: ${{ needs.build.outputs.tags }}
+                  matrix-step-name: ${{ github.job }}
+                  matrix-key: ${{ matrix.target }}
+                  outputs: |-
+                      image_version: ${{ steps.meta.outputs.version }}
+
+    read:
+        runs-on: ubuntu-latest
+        needs:
+            - build
+        steps:
+            - uses: GoCodeAlone/github-action-matrix-outputs-read@v1
+              id: read
+              with:
+                  matrix-step-name: build
+            - id: convert
+              run: |
+                  converted=$(jq -c '.image_version | to_entries | map("\(.key):\(.value)")' <<< '${{ steps.read.outputs.result }}')
+                  echo "converted=$converted" >> $GITHUB_OUTPUT
+        outputs:
+            converted: "${{ steps.convert.outputs.converted }}"
+
     test:
         runs-on: ubuntu-latest
         needs:
-            - build
-            - experiment
-            - setup_test_matrix
+            - read
         strategy:
             matrix:
-                tag: ${{ fromJson(needs.setup_test_matrix.outputs.matrix) }}
+                tag: ${{ fromJson(needs.read.outputs.converted) }}
         steps:
             - name: Info
               run: |
                   echo "Built image: ${{ matrix.tag }}"
-            # - name: Build and run dev "container task
-            #   uses: devcontainers/ci@v0.3
-            #   with:
-            #       runCmd: echo "Hello from ros distro $ROS_DISTRO"
+            - name: Build and run dev "container task
+              uses: devcontainers/ci@v0.3
+              with:
+                  imageName: ghcr.io/${{ github.repository }}/${{ matrix.tag }}
+                  runCmd: echo "Hello from ros distro $ROS_DISTRO"
