--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -12,7 +12,7 @@ jobs:
             matrix: ${{ steps.generate.outputs.matrix }}
         steps:
             - name: Checkout
-              uses: actions/checkout@v4
+              uses: actions/checkout@v5
 
             - name: Generate matrix
               id: generate
@@ -28,6 +28,7 @@ jobs:
         outputs:
             tags: ${{ steps.meta.outputs.tags }}
             json: ${{ steps.matrix-output.outputs.json }}
+            version: ${{ steps.meta.outputs.version }}
         permissions:
             contents: read
             packages: write
@@ -73,43 +74,43 @@ jobs:
                   set: |
                       *.cache-from=type=gha,scope=${{ matrix.target }}
                       *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
-            - uses: GoCodeAlone/github-action-matrix-outputs-write@v1
-              id: matrix-output
-              with:
-                  matrix-step-name: ${{ github.job }}
-                  matrix-key: ${{ matrix.target }}
-                  outputs: |-
-                      image_version: ${{ steps.meta.outputs.version }}
 
-    read:
+    experiment:
         runs-on: ubuntu-latest
         needs:
+            - prepare
             - build
-        steps:
-            - uses: GoCodeAlone/github-action-matrix-outputs-read@v1
-              id: read
-              with:
-                  matrix-step-name: build
-            - id: convert
-              run: |
-                  converted=$(jq -c '.image_version | to_entries | map("\(.key):\(.value)")' <<< '${{ steps.read.outputs.result }}')
-                  echo "converted=$converted" >> $GITHUB_OUTPUT
-        outputs:
-            converted: "${{ steps.convert.outputs.converted }}"
-
-    test:
-        runs-on: ubuntu-latest
-        needs:
-            - read
         strategy:
             matrix:
-                tag: ${{ fromJson(needs.read.outputs.converted) }}
+                include: ${{ fromJson(needs.prepare.outputs.matrix) }}
         steps:
-            - name: Info
+            - name: Checkout
+              uses: actions/checkout@v5
+            - name: Experiment step
               run: |
-                  echo "Built image: ${{ matrix.tag }}"
-            - name: Build and run dev "container task
+                  echo "target: ${{ matrix.target }}"
+                  echo "version: ${{ needs.build.outputs.version }}"
+
+            - name: Run devcontainer
               uses: devcontainers/ci@v0.3
               with:
-                  imageName: ghcr.io/${{ github.repository }}/${{ matrix.tag }}
+                  imageName: ghcr.io/${{ github.repository }}/${{ matrix.target }}
+                  imageTag: ${{ needs.build.outputs.version }}
                   runCmd: echo "Hello from ros distro $ROS_DISTRO"
+
+    # test:
+    #     runs-on: ubuntu-latest
+    #     needs:
+    #         - read
+    #     strategy:
+    #         matrix:
+    #             tag: ${{ fromJson(needs.read.outputs.converted) }}
+    #     steps:
+    #         - name: Info
+    #           run: |
+    #               echo "Built image: ${{ matrix.tag }}"
+    #         - name: Build and run dev "container task
+    #           uses: devcontainers/ci@v0.3
+    #           with:
+    #               imageName: ghcr.io/${{ github.repository }}/${{ matrix.tag }}
+    #               runCmd: echo "Hello from ros distro $ROS_DISTRO"
