--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -27,7 +27,6 @@ jobs:
             - prepare
         outputs:
             tags: ${{ steps.meta.outputs.tags }}
-            json: ${{ steps.matrix-output.outputs.json }}
             version: ${{ steps.meta.outputs.version }}
         permissions:
             contents: read
@@ -75,7 +74,7 @@ jobs:
                       *.cache-from=type=gha,scope=${{ matrix.target }}
                       *.cache-to=type=gha,mode=max,scope=${{ matrix.target }}
 
-    experiment:
+    test:
         runs-on: ubuntu-latest
         needs:
             - prepare
@@ -93,24 +92,11 @@ jobs:
 
             - name: Run devcontainer
               uses: devcontainers/ci@v0.3
-              with:
-                  imageName: ghcr.io/${{ github.repository }}/${{ matrix.target }}
-                  imageTag: ${{ needs.build.outputs.version }}
-                  runCmd: echo "Hello from ros distro $ROS_DISTRO"
+              env:
+                  IMAGE_NAME: "${{ matrix.target }}"
+                  IMAGE_TAG: "${{ needs.build.outputs.version }}"
 
-    # test:
-    #     runs-on: ubuntu-latest
-    #     needs:
-    #         - read
-    #     strategy:
-    #         matrix:
-    #             tag: ${{ fromJson(needs.read.outputs.converted) }}
-    #     steps:
-    #         - name: Info
-    #           run: |
-    #               echo "Built image: ${{ matrix.tag }}"
-    #         - name: Build and run dev "container task
-    #           uses: devcontainers/ci@v0.3
-    #           with:
-    #               imageName: ghcr.io/${{ github.repository }}/${{ matrix.tag }}
-    #               runCmd: echo "Hello from ros distro $ROS_DISTRO"
+              with:
+                  push: never
+                  imageName: ghcr.io/${{ github.repository }}/devcontainer-test-${{ matrix.target }}
+                  runCmd: echo "Hello from ros distro ${ROS_DISTRO} $(. /etc/os-release && echo ${VERSION_CODENAME})"
