feat: restore post-create script, add build of firmware

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -99,4 +99,7 @@ jobs:
               with:
                   push: never
                   imageName: ghcr.io/${{ github.repository }}/devcontainer-test-${{ matrix.target }}
-                  runCmd: echo "Hello from ros distro ${ROS_DISTRO} $(. /etc/os-release && echo ${VERSION_CODENAME})"
+                  runCmd: |
+                      echo "Hello from Ubuntu $(. /etc/os-release && echo ${VERSION_CODENAME}) with ROS2 ${ROS_DISTRO}"
+                      source /opt/ros/${ROS_DISTRO}/setup.zsh
+                      scripts/build.zsh
