feat: run daily at 17:00

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -1,5 +1,7 @@
 name: "build"
-on: # rebuild any PRs and main branch changes
+on:
+    schedule:
+        - cron: "0 17 * * *"
     pull_request:
     push:
         branches:
