feat: minimal CI and README.md (#2)
* feat: initial ci setup

* feat: build containers

* feat: update from deprecated subaction list-targets to matrix, add permissions to modify packages, add caching

* ci: comment long running stuff for testing

* ci: login to ghcr.io

* feat: use gha cache

* chore: uncomment long-running docker commands

* fix: scoped caching, fixed tag name

* feat: use tagged image in devcontainer.json, separate tags for branches and main

* feat: use docker meta action

* feat: better usage of docker meta action

* feat: groundwork for test step

* feat: bring back cache

* fix: fix tsgs matrix

* feat: cache experiments, run matrix experiments

* feat: use GHA cache

* feat: test job experiments

* feat: separate cache scope for each image

* feat: tags matrix experiments

* feat: experiment with nested matrices

* feat: simplify workflow

* feat: make multiple different devcontainer version testable in ci

* fix: ARG must be first and FROM immediately after

* fix: add default value for tag to avoid docker warning

* feat: restore post-create script, add build of firmware

* feat: run daily at 17:00

* feat: minimal working build

* docs: minimal readme

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,13 @@
 {
     "name": "Ubuntu",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+    // "image": "ghcr.io/kabot-io/kabot-zephyr/dev-noble-kilted:latest",
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "Dockerfile",
+        "args": {
+            "IMAGE_NAME": "${localEnv:IMAGE_NAME:dev-noble-kilted}",
+            "IMAGE_TAG": "${localEnv:IMAGE_TAG:latest}"
+        }
     },
     "customizations": {
         "vscode": {
@@ -16,7 +21,9 @@
                 "xaver.clang-format",
                 "plorefice.devicetree",
                 "EditorConfig.EditorConfig",
-                "redhat.vscode-yaml"
+                "redhat.vscode-yaml",
+                "HashiCorp.HCL",
+                "GitHub.vscode-github-actions"
             ]
         }
     },
