flash/monitor esp32 using devcontainer

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build native_sim",
             "type": "shell",
-            "command": "source .venv/bin/activate && west build app --build-dir build -b native_sim -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
+            "command": "source .venv/bin/activate && west build app --build-dir build -b native_sim --pristine -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -16,12 +16,15 @@
             "label": "Run native_sim",
             "type": "shell",
             "command": "./build/zephyr/zephyr.exe --eeprom=build/eeprom.bin",
-            "problemMatcher": []
+            "problemMatcher": [],
+            "dependsOn": [
+                "Build native_sim"
+            ]
         },
         {
             "label": "Build esp32s3",
             "type": "shell",
-            "command": "source .venv/bin/activate && west build app --build-dir build -b esp32s3_devkitc/esp32s3/appcpu -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
+            "command": "source .venv/bin/activate && west build app --build-dir build -b esp32s3_devkitc/esp32s3/appcpu --pristine -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
             "group": {
                 "kind": "build",
                 "isDefault": false
@@ -31,6 +34,19 @@
             "label": "Clean esp32s3",
             "type": "shell",
             "command": "source .venv/bin/activate && west build app --build-dir build/esp32s3 -b esp32s3_devkitc/esp32s3/appcpu clean"
+        },
+        {
+            "label": "Flash esp32s3",
+            "type": "shell",
+            "command": "./scripts/flash.zsh",
+            "dependsOn": [
+                "Build esp32s3"
+            ]
+        },
+        {
+            "label": "Monitor esp32s3",
+            "type": "shell",
+            "command": "source .venv/bin/activate && west espressif monitor",
         },
         {
             "label": "Clean build directory",
