--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build native_sim",
             "type": "shell",
-            "command": "source .venv/bin/activate && west build app --build-dir build -b native_sim --pristine -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
+            "command": "source .venv/bin/activate && west build app --build-dir build -b native_sim -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -24,7 +24,7 @@
         {
             "label": "Build esp32s3",
             "type": "shell",
-            "command": "source .venv/bin/activate && west build app --build-dir build -b esp32s3_devkitc/esp32s3/appcpu --pristine -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
+            "command": "source .venv/bin/activate && west build app --build-dir build -b esp32s3_devkitc/esp32s3/appcpu -- -DCMAKE_EXPORT_COMPILE_COMMANDS=ON",
             "group": {
                 "kind": "build",
                 "isDefault": false
@@ -39,9 +39,6 @@
             "label": "Flash esp32s3",
             "type": "shell",
             "command": "./scripts/flash.zsh",
-            "dependsOn": [
-                "Build esp32s3"
-            ]
         },
         {
             "label": "Monitor esp32s3",
