ci: auto latests tag fix for main branch build

--- a/.github/workflows/devcontainer-ci.yml
+++ b/.github/workflows/devcontainer-ci.yml
@@ -53,6 +53,10 @@ jobs:
 
               with:
                   images: ghcr.io/${{github.repository}}/${{ matrix.target }}
+                  flavor: |
+                      latest=auto
+                      prefix=
+                      suffix=
                   sep-tags: ","
                   tags: |
                       type=ref,event=branch
